# BreezeDeploy

./: .gitignore  .gitmodules  BreezeDeployConfig.cmake.in  CMakeLists.txt  README.md
breeze_deploy/: CMakeLists.txt
breeze_deploy/backends/: breeze_deploy_backend.cpp  breeze_deploy_backend.h  breeze_deploy_backend_option.cpp  breeze_deploy_backend_option.h
breeze_deploy/backends/onnx_backend/: onnx_backend.cpp  onnx_backend.h  onnx_backend_option.cpp  onnx_backend_option.h
breeze_deploy/backends/rknpu_backend/: rknpu_backend.cpp  rknpu_backend.h  rknpu_backend_option.h
breeze_deploy/core/: breeze_deploy_logger.cpp  breeze_deploy_logger.h  breeze_deploy_mat.cpp  breeze_deploy_mat.h  breeze_deploy_tensor.cpp  breeze_deploy_tensor.h  breeze_deploy_time.cpp  breeze_deploy_time.h  breeze_deploy_type.cpp  breeze_deploy_type.h
breeze_deploy/core/logger/: breeze_deploy_logger.cpp  breeze_deploy_logger.h
breeze_deploy/core/mat/: breeze_deploy_mat.cpp  breeze_deploy_mat.h
breeze_deploy/core/result/: breeze_deploy_result.h
breeze_deploy/core/tensor/: breeze_deploy_tensor.cpp  breeze_deploy_tensor.h
breeze_deploy/core/time/: breeze_deploy_time.cpp  breeze_deploy_time.h
breeze_deploy/index/: breeze_deploy_index.cpp  breeze_deploy_index.h
breeze_deploy/models/: breeze_deploy_model.cpp  breeze_deploy_model.h
breeze_deploy/models/classification/: classification_model.cpp  classification_model.h  classification_result.cpp  classification_result.h  postprocess_function.h
breeze_deploy/models/classification/arcface/: arc_face.h
breeze_deploy/models/classification/ghostnet/: ghost_net.h
breeze_deploy/models/classification/resnet/: resnet.cpp  resnet.h
breeze_deploy/models/detection/: detection_model.cpp  detection_model.h  detection_result.h
breeze_deploy/models/detection/paddle_detection/: paddle_detection.cpp  paddle_detetcion.cpp  paddle_detetcion.h
breeze_deploy/models/detection/scrfd/: scrfd.cpp  scrfd.h
breeze_deploy/models/detection/with_landmark/: detection_model_with_landmark.cpp  detection_model_with_landmark.h
breeze_deploy/models/detection/with_landmark/yolov5_face/: yolov_5_face.cpp  yolov_5_face.h
breeze_deploy/models/detection/without_landmark/: detection_model_without_landmark.cpp  detection_model_without_landmark.h
breeze_deploy/models/detection/without_landmark/yolov5/: yolov_5.cpp  yolov_5.h
breeze_deploy/models/detection/yolov5/: yolov_5.cpp  yolov_5.h
breeze_deploy/models/detection/yolov5_face/: yolov_5_face.cpp  yolov_5_face.h
breeze_deploy/models/feature/: feature_model.cpp  feature_model.h
breeze_deploy/models/preprocess/: breeze_deploy_preprocess.h  preprocess_function.h
breeze_deploy/models/preprocess/bgr_to_rgb/: bgr_to_rgb.cpp  bgr_to_rgb.h
breeze_deploy/models/preprocess/hwc_to_chw/: hwc_to_chw.cpp  hwc_to_chw.h
breeze_deploy/models/preprocess/letterbox/: letter_box.cpp  letter_box.h
breeze_deploy/models/preprocess/normalize/: normalize.cpp  normalize.h
breeze_deploy/models/preprocess/resize/: resize.cpp  resize.h
breeze_deploy/models/segmentation/: segmentation_model.cpp  segmentation_model.h
breeze_deploy/pipeline/image_recognition/: image_recognition.cpp  image_recognition.h
breeze_deploy/postprocess_function/: breeze_deploy_postprocess_function.cpp  breeze_deploy_postprocess_function.h  postprocess_function.h
breeze_deploy/postprocess_function/softmax/: softmax.cpp  softmax.h
breeze_deploy/postprocess_function/top_k/: top_k.cpp  top_k.h
breeze_deploy/preprocess_function/: breeze_deploy_preprocess_function.cpp  breeze_deploy_preprocess_function.h  preprocess_function.h
breeze_deploy/preprocess_function/bgr_to_rgb/: bgr_to_rgb.cpp  bgr_to_rgb.h
breeze_deploy/preprocess_function/hwc_to_chw/: hwc_to_chw.cpp  hwc_to_chw.h
breeze_deploy/preprocess_function/letterbox/: letter_box.cpp  letter_box.h
breeze_deploy/preprocess_function/normalize/: normalize.cpp  normalize.h
breeze_deploy/preprocess_function/resize/: resize.cpp  resize.h
breeze_deploy/utils/: utils.cpp  utils.h
breeze_deploy/utils/data_process/cosine_similarity/: cosine_similarity.h
breeze_deploy/utils/data_process/generate_color_map/: generate_color_map.cpp  generate_color_map.h
breeze_deploy/utils/data_process/normalize_l2/: normalize_l2.cpp  normalize_l2.h
breeze_deploy/utils/data_process/softmax/: softmax.h
breeze_deploy/utils/data_process/top_k/: top_k.cpp  top_k.h
breeze_deploy/utils/filesystem/: filesystem.cpp  filesystem.h
breeze_deploy/utils/image_process/crop/: crop.cpp  crop.h
cmake/: eigen.cmake  faiss.cmake  onnx_runtime.cmake  onnxruntime.cmake  opencv.cmake  rknn_runtime.cmake  spdlog.cmake  yaml_cpp.cmake
config/classification/: GhostNet_x1_0_QAT_template.yaml  ResNet18_template.yaml  ResNet50_vd_QAT_template.yaml  arcface_onnx_template.yaml  classification_onnx_template.yaml  resnet18_template.yaml  resnet_onnx_template.yaml  resnet_rknn_template.yaml
config/detection/: paddle_detection_template.yaml  scrfd_template.yaml  yolov5_face_onnx_template.yaml  yolov5_onnx_template.yaml
config/feature/: arcface_onnx_template.yaml  arcface_template.yaml
docs/: build.md
example/: CMakeLists.txt  README.md
example/classification_test/: README.md  paddle_clas.md  test_feature_result.cpp  test_label_result.cpp
example/cross-compilation_test/: hello_world.cpp
example/detection_test/: README.md  insight_face.md  test_paddle_detection.cpp  test_scrfd.cpp  test_yolov5.cpp  test_yolov5_face.cpp
example/feature_test/: README.md  arcface.md
example/pipeline/: README.md  test_image_recognition.cpp
example/pipeline_test/: README.md  face_recognition_system.md  test_image_recognition.cpp
example/segmentation_test/: segmentation.md  test_segmentation.cpp
test/: CMakeLists.txt  README.md  test_resnet.cpp
test/classification_test/: test_ghostnet.cpp  test_resnet.cpp
test/detection_test/: test_yolov5.cpp  test_yolov5_face.cpp
test/ocr_test/: test_license_plate.cpp
test/pipeline/: test_yolov5_face_license_plate.cpp
tools/: README.md  onnx2rknn.py
(+5 files in other folders)
